feat(backend): verify pilot account
